@@ -54,3 +54,4 @@ data/default-prefs.js
 gtester.xml
 report.html
 test/test
+install_manifest.txt
